@@ -31,6 +31,8 @@ Features
 
  * webui handles package sources supporting project links.
 
+ * priorization system for requests
+
  * optional binary package tracking, can be used to track released packages.
    Esp. important for maintained products.
 
